<resources>
    <string name="app_name">KimGouweleeuw-pset1</string>
    <string name="potato">Mr. Potato Head</string>
    <string name="click">Click on the checkboxes to edit your potato</string>
    <string name="arms">Arms</string>
    <string name="body">Body</string>
    <string name="ears">Ears</string>
    <string name="eyebrows">Eyebrows</string>
    <string name="eyes">Eyes</string>
    <string name="glasses">Glasses</string>
    <string name="hat">Hat</string>
    <string name="mouth">Mouth</string>
    <string name="mustache">Mustache</string>
    <string name="nose">Nose</string>
    <string name="shoes">Shoes</string>
</resources>
