<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.kimgo.kimgouweleeuw_pset1.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="187dp"
        android:layout_height="33dp"
        android:text="@string/potato"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:gravity="center"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="243dp"
        android:layout_height="226dp"
        android:contentDescription="@string/body"
        android:gravity="center"
        app:srcCompat="@drawable/body"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="54dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <CheckBox
                android:id="@+id/arms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arms"

                tools:layout_editor_absoluteX="200dp"
                tools:layout_editor_absoluteY="326dp" />
            <!--android:onClick="addBodyPart"-->

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hat"
                tools:layout_editor_absoluteX="98dp"
                tools:layout_editor_absoluteY="358dp" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ears"
                tools:layout_editor_absoluteX="98dp"
                tools:layout_editor_absoluteY="390dp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mouth"
                tools:layout_editor_absoluteX="98dp"
                tools:layout_editor_absoluteY="422dp" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyebrows"
                tools:layout_editor_absoluteX="98dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/checkBox2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mustache"
                tools:layout_editor_absoluteX="98dp"
                tools:layout_editor_absoluteY="454dp" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyes"
                tools:layout_editor_absoluteX="200dp"
                tools:layout_editor_absoluteY="358dp" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nose"
                tools:layout_editor_absoluteX="200dp"
                tools:layout_editor_absoluteY="390dp" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:text="@string/glasses"
                app:layout_constraintBottom_toTopOf="@+id/checkBox10"
                tools:layout_editor_absoluteX="200dp" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoes"
                tools:layout_editor_absoluteX="200dp"
                tools:layout_editor_absoluteY="454dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
