<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.kimgo.kimgouweleeuw_pset1.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="187dp"
        android:layout_height="33dp"
        android:text="@string/potato"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:gravity="center"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/bodyim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/body"
            android:gravity="center"
            app:srcCompat="@drawable/body"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="54dp" />

        <ImageView
            android:id="@+id/armsim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arms"
            android:gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/arms"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="54dp" />

        <ImageView
            android:id="@+id/earsim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ears"
            android:gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/ears"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="54dp" />

        <ImageView
            android:id="@+id/eyebrowsim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/eyebrows"
            android:gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/eyebrows"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="54dp" />

        <ImageView
            android:id="@+id/eyesim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/eyes"
            android:gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/eyes"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="54dp" />

        <ImageView
            android:id="@+id/glassesim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/glasses"
            android:gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/glasses"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="54dp" />

        <ImageView
            android:id="@+id/hatim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hat"
            android:gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/hat"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="54dp" />

        <ImageView
            android:id="@+id/mouthim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mouth"
            android:gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/mouth"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="54dp" />

        <ImageView
            android:id="@+id/mustacheim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mustache"
            android:gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/mustache"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="54dp" />

        <ImageView
            android:id="@+id/noseim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nose"
            android:gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/nose"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="54dp" />

        <ImageView
            android:id="@+id/shoesim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shoes"
            android:gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/shoes"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="54dp" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arms"
                tools:layout_editor_absoluteX="200dp"
                tools:layout_editor_absoluteY="326dp" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hat"
                tools:layout_editor_absoluteX="98dp"
                tools:layout_editor_absoluteY="358dp" />
        </LinearLayout>

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ears"
                tools:layout_editor_absoluteX="98dp"
                tools:layout_editor_absoluteY="390dp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mouth"
                tools:layout_editor_absoluteX="98dp"
                tools:layout_editor_absoluteY="422dp" />
        </LinearLayout>

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyebrows"
                tools:layout_editor_absoluteX="98dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/checkBox2" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mustache"
                tools:layout_editor_absoluteX="98dp"
                tools:layout_editor_absoluteY="454dp" />
        </LinearLayout>

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyes"
                tools:layout_editor_absoluteX="200dp"
                tools:layout_editor_absoluteY="358dp" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nose"
                tools:layout_editor_absoluteX="200dp"
                tools:layout_editor_absoluteY="390dp" />
        </LinearLayout>

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:text="@string/glasses"
                app:layout_constraintBottom_toTopOf="@+id/checkBox10"
                tools:layout_editor_absoluteX="200dp" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoes"
                tools:layout_editor_absoluteX="200dp"
                tools:layout_editor_absoluteY="454dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
